# docs/swagger.json
@@ -209,6 +209,30 @@
                 }
             }
         },
+        "/auth/bind/wechat/request": {
+            "post": {
+                "description": "绑定微信",
+                "tags": [
+                    "user"
+                ],
+                "summary": "用户",
+                "operationId": "wechat-bind-request",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.WechatScan"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errs.JsonRespondError"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/wechat": {
             "post": {
                 "description": "微信oauth2.0登录",
@@ -242,7 +266,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.WechatScanLogin"
+                            "$ref": "#/definitions/dto.WechatScan"
                         }
                     },
                     "400": {
@@ -751,6 +775,38 @@
                 }
             }
         },
+        "/user/oauth": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "解绑三方登录",
+                "tags": [
+                    "user"
+                ],
+                "summary": "用户",
+                "operationId": "user-delete-oauth",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "普通:bbs|wechat",
+                        "name": "platform",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/user/password": {
             "put": {
                 "security": [
@@ -796,6 +852,29 @@
                         "required": true
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/user/setting": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "用户设置信息",
+                "tags": [
+                    "user"
+                ],
+                "summary": "用户",
+                "operationId": "user-setting-info",
                 "responses": {
                     "200": {
                         "description": ""
@@ -872,7 +951,7 @@
                 }
             }
         },
-        "dto.WechatScanLogin": {
+        "dto.WechatScan": {
             "type": "object",
             "properties": {
                 "code": {
